[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reinforce"
version = "0.0.1"
description = ""
dependencies = [
    "gymnasium[accept-rom-license,atari,classic-control] ==1.2.1",
    "moviepy ==2.2.1",
    "numpy ==2.2.6",
    "opencv-python ==4.12.0.88",
    "pygame ==2.6.1",
    "tensorboard ==2.20.0",
    "torch ==2.9.0",
    "torchvision ==0.24.0",
    "ale-py ==0.11.2",
]
